more robust autosuspend monitoring

--- a/notebooks/rakuten/knot-dba.ipynb
+++ b/notebooks/rakuten/knot-dba.ipynb
@@ -13,14 +13,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b75008cd-0272-4c28-abe6-7c0734a47fad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "dd6f1bbf-11f5-4b60-ad20-654bb98996bb",
    "metadata": {},
@@ -29,11 +21,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10:19:46 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
-      "10:19:46 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n",
-      "10:19:46 INFO:Setting use_openssl_only mode to False\n",
-      "10:19:48 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
-      "10:19:48 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n"
+      "05:43:10 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
+      "05:43:10 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n",
+      "05:43:10 INFO:Setting use_openssl_only mode to False\n",
+      "05:43:12 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
+      "05:43:12 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n"
      ]
     },
     {
@@ -47,11 +39,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10:19:49 INFO:Snowpark Session information: \n",
+      "05:43:13 INFO:Snowpark Session information: \n",
       "\"version\" : 1.3.0,\n",
       "\"python.version\" : 3.8.16,\n",
       "\"python.connector.version\" : 2.7.12,\n",
-      "\"python.connector.session.id\" : 9098488785211606,\n",
+      "\"python.connector.session.id\" : 9098488785367046,\n",
       "\"os.name\" : Darwin\n",
       "\n"
      ]
@@ -60,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 19.5 ms (started: 2023-06-03 22:19:49 -04:00)\n"
+      "time: 19.1 ms (started: 2023-06-06 17:43:13 -04:00)\n"
      ]
     }
    ],
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "97363426-6408-4712-ae9c-f1016abfff7d",
    "metadata": {},
    "outputs": [
@@ -94,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 830 µs (started: 2023-06-03 22:20:49 -04:00)\n"
+      "time: 1.89 ms (started: 2023-06-06 17:45:19 -04:00)\n"
      ]
     }
    ],
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "7ebef3f9-511c-4ec0-84d8-ae77e59a090a",
    "metadata": {},
    "outputs": [
@@ -135,17 +127,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10:46:57 INFO:query: [alter warehouse demo set warehouse_size=medium]\n",
-      "10:46:57 INFO:query execution done\n"
+      "05:45:21 INFO:query: [alter warehouse demo set warehouse_size=medium]\n",
+      "05:45:22 INFO:query execution done\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0x7f9217ea00d0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0x7fd61e0cc400>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -153,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 410 ms (started: 2023-06-03 22:46:57 -04:00)\n"
+      "time: 398 ms (started: 2023-06-06 17:45:21 -04:00)\n"
      ]
     }
    ],
@@ -327,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "91209397-d0e2-41d4-b644-4a7f514b60da",
    "metadata": {},
    "outputs": [
@@ -335,53 +327,93 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10:30:03 INFO:query: [create or replace table share_copy.knot.stg_rate_sheet_daily as select * from kn...]\n",
-      "10:30:03 INFO:query: [create or replace table share_copy.knot.stg_warehouse_metering_history as select...]\n",
-      "10:30:03 INFO:query: [create or replace table share_copy.knot.stg_access_history as select * from knot...]\n",
-      "10:30:03 INFO:query: [create or replace table share_copy.knot.stg_grants_to_roles as select * from kno...]\n",
-      "10:30:05 INFO:query execution done\n",
-      "10:30:05 INFO:query: [create or replace table share_copy.knot.stg_query_history as select * from knot_...]\n",
-      "10:30:05 INFO:query execution done\n",
-      "10:30:05 INFO:query: [create or replace table share_copy.knot.stg_remaining_balance_daily as select * ...]\n",
-      "10:30:06 INFO:query execution done\n",
-      "10:30:06 INFO:query: [create or replace table share_copy.knot.stg_sessions as select * from knot_share...]\n",
-      "10:30:07 INFO:query execution done\n",
-      "10:30:07 INFO:query: [create or replace table share_copy.knot.stg_storage_usage as select * from knot_...]\n",
-      "10:30:08 INFO:query execution done\n",
-      "10:30:08 INFO:query: [create or replace table share_copy.knot.stg_table_storage_metrics as select * fr...]\n",
-      "10:30:14 INFO:query execution done\n",
-      "10:30:14 INFO:query: [create or replace table share_copy.knot.stg_usage_in_currency_daily as select * ...]\n",
-      "10:30:16 INFO:query execution done\n",
-      "10:30:16 INFO:query: [create or replace table share_copy.knot.stg_users as select * from knot_share.op...]\n",
-      "10:30:19 INFO:query execution done\n",
-      "10:30:19 INFO:query: [create or replace table share_copy.knot.stg_views as select * from knot_share.op...]\n",
-      "10:30:24 INFO:query execution done\n",
-      "10:30:24 INFO:query: [create or replace table share_copy.knot.stg_warehouse_events_history as select *...]\n",
-      "10:30:26 INFO:query execution done\n",
-      "10:30:26 INFO:query: [create or replace table share_copy.knot.stg_warehouse_load_history as select * f...]\n",
-      "10:30:29 INFO:query execution done\n",
-      "10:30:29 INFO:query: [create or replace table share_copy.knot.target_role_grants as select * from knot...]\n",
-      "10:30:30 INFO:query execution done\n",
-      "10:30:30 INFO:query: [create or replace table share_copy.knot.warehouse_grants as select * from knot_s...]\n",
-      "10:30:30 INFO:query execution done\n",
-      "10:30:30 INFO:query: [create or replace table share_copy.knot.warehouse_params as select * from knot_s...]\n",
-      "10:30:31 INFO:query execution done\n",
-      "10:30:31 INFO:query: [create or replace table share_copy.knot.warehouse_usage_granted as select * from...]\n",
-      "10:30:31 INFO:query execution done\n",
-      "10:30:31 INFO:query: [create or replace table share_copy.knot.warehouses as select * from knot_share.o...]\n",
-      "10:30:33 INFO:query execution done\n",
-      "10:30:33 INFO:query: [create or replace table share_copy.knot.DAILY_RATES as select * from knot_share....]\n",
-      "10:30:33 INFO:query execution done\n",
-      "10:30:34 INFO:query execution done\n",
-      "10:34:14 INFO:query execution done\n",
-      "10:37:21 INFO:query execution done\n"
+      "05:51:23 INFO:query: [create or replace table share_copy.knot.stg_rate_sheet_daily as select * from kn...]\n",
+      "05:51:23 INFO:query: [create or replace table share_copy.knot.stg_warehouse_metering_history as select...]\n",
+      "05:51:23 INFO:query: [create or replace table share_copy.knot.stg_access_history as select * from knot...]\n",
+      "05:51:23 INFO:query: [create or replace table share_copy.knot.stg_grants_to_roles as select * from kno...]\n",
+      "05:51:25 INFO:query execution done\n",
+      "05:51:25 INFO:query: [create or replace table share_copy.knot_monitoring.stg_rate_sheet_daily clone sh...]\n",
+      "05:51:25 INFO:query execution done\n",
+      "05:51:25 INFO:query: [create or replace table share_copy.knot_monitoring.stg_warehouse_metering_histor...]\n",
+      "05:51:25 INFO:query execution done\n",
+      "05:51:25 INFO:query: [create or replace table share_copy.knot_monitoring.stg_grants_to_roles clone sha...]\n",
+      "05:51:25 INFO:query execution done\n",
+      "05:51:25 INFO:query: [create or replace table share_copy.knot.stg_query_history as select * from knot_...]\n",
+      "05:51:26 INFO:query execution done\n",
+      "05:51:26 INFO:query: [create or replace table share_copy.knot.stg_remaining_balance_daily as select * ...]\n",
+      "05:51:26 INFO:query execution done\n",
+      "05:51:26 INFO:query: [create or replace table share_copy.knot.stg_sessions as select * from knot_share...]\n",
+      "05:51:27 INFO:query execution done\n",
+      "05:51:27 INFO:query: [create or replace table share_copy.knot_monitoring.stg_remaining_balance_daily c...]\n",
+      "05:51:29 INFO:query execution done\n",
+      "05:51:29 INFO:query: [create or replace table share_copy.knot.stg_storage_usage as select * from knot_...]\n",
+      "05:51:30 INFO:query execution done\n",
+      "05:51:30 INFO:query: [create or replace table share_copy.knot_monitoring.stg_storage_usage clone share...]\n",
+      "05:51:32 INFO:query execution done\n",
+      "05:51:32 INFO:query: [create or replace table share_copy.knot.stg_table_storage_metrics as select * fr...]\n",
+      "05:51:33 INFO:query execution done\n",
+      "05:51:33 INFO:query: [create or replace table share_copy.knot_monitoring.stg_sessions clone share_copy...]\n",
+      "05:51:34 INFO:query execution done\n",
+      "05:51:34 INFO:query: [create or replace table share_copy.knot.stg_usage_in_currency_daily as select * ...]\n",
+      "05:51:35 INFO:query execution done\n",
+      "05:51:35 INFO:query: [create or replace table share_copy.knot_monitoring.stg_usage_in_currency_daily c...]\n",
+      "05:51:36 INFO:query execution done\n",
+      "05:51:36 INFO:query: [create or replace table share_copy.knot.stg_users as select * from knot_share.op...]\n",
+      "05:51:37 INFO:query execution done\n",
+      "05:51:37 INFO:query: [create or replace table share_copy.knot_monitoring.stg_users clone share_copy.kn...]\n",
+      "05:51:38 INFO:query execution done\n",
+      "05:51:38 INFO:query: [create or replace table share_copy.knot.stg_views as select * from knot_share.op...]\n",
+      "05:51:41 INFO:query execution done\n",
+      "05:51:41 INFO:query: [create or replace table share_copy.knot_monitoring.stg_views clone share_copy.kn...]\n",
+      "05:51:42 INFO:query execution done\n",
+      "05:51:42 INFO:query: [create or replace table share_copy.knot.stg_warehouse_events_history as select *...]\n",
+      "05:51:45 INFO:query execution done\n",
+      "05:51:45 INFO:query: [create or replace table share_copy.knot_monitoring.stg_warehouse_events_history ...]\n",
+      "05:51:46 INFO:query execution done\n",
+      "05:51:46 INFO:query: [create or replace table share_copy.knot.stg_warehouse_load_history as select * f...]\n",
+      "05:51:49 INFO:query execution done\n",
+      "05:51:49 INFO:query: [create or replace table share_copy.knot_monitoring.stg_warehouse_load_history cl...]\n",
+      "05:51:49 INFO:query execution done\n",
+      "05:51:49 INFO:query: [create or replace table share_copy.knot_monitoring.stg_table_storage_metrics clo...]\n",
+      "05:51:50 INFO:query execution done\n",
+      "05:51:50 INFO:query: [create or replace table share_copy.knot.target_role_grants as select * from knot...]\n",
+      "05:51:50 INFO:query execution done\n",
+      "05:51:50 INFO:query: [create or replace table share_copy.knot.warehouse_grants as select * from knot_s...]\n",
+      "05:51:51 INFO:query execution done\n",
+      "05:51:51 INFO:query: [create or replace table share_copy.knot_monitoring.target_role_grants clone shar...]\n",
+      "05:51:51 INFO:query execution done\n",
+      "05:51:51 INFO:query: [create or replace table share_copy.knot_monitoring.warehouse_grants clone share_...]\n",
+      "05:51:52 INFO:query execution done\n",
+      "05:51:52 INFO:query: [create or replace table share_copy.knot.warehouse_params as select * from knot_s...]\n",
+      "05:51:52 INFO:query execution done\n",
+      "05:51:52 INFO:query: [create or replace table share_copy.knot.warehouse_usage_granted as select * from...]\n",
+      "05:51:53 INFO:query execution done\n",
+      "05:51:53 INFO:query: [create or replace table share_copy.knot_monitoring.warehouse_usage_granted clone...]\n",
+      "05:51:54 INFO:query execution done\n",
+      "05:51:54 INFO:query: [create or replace table share_copy.knot_monitoring.warehouse_params clone share_...]\n",
+      "05:51:54 INFO:query execution done\n",
+      "05:51:54 INFO:query: [create or replace table share_copy.knot.warehouses as select * from knot_share.o...]\n",
+      "05:51:55 INFO:query execution done\n",
+      "05:51:55 INFO:query: [create or replace table share_copy.knot.DAILY_RATES as select * from knot_share....]\n",
+      "05:51:55 INFO:query execution done\n",
+      "05:51:55 INFO:query: [create or replace table share_copy.knot_monitoring.warehouses clone share_copy.k...]\n",
+      "05:51:56 INFO:query execution done\n",
+      "05:51:56 INFO:query: [create or replace table share_copy.knot_monitoring.DAILY_RATES clone share_copy....]\n",
+      "05:51:56 INFO:query execution done\n",
+      "05:51:57 INFO:query execution done\n",
+      "05:53:35 INFO:query execution done\n",
+      "05:53:35 INFO:query: [create or replace table share_copy.knot_monitoring.stg_query_history clone share...]\n",
+      "05:53:37 INFO:query execution done\n",
+      "05:55:13 INFO:query execution done\n",
+      "05:55:13 INFO:query: [create or replace table share_copy.knot_monitoring.stg_access_history clone shar...]\n",
+      "05:55:14 INFO:query execution done\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 7min 17s (started: 2023-06-03 22:30:03 -04:00)\n"
+      "time: 3min 51s (started: 2023-06-06 17:51:23 -04:00)\n"
      ]
     }
    ],
@@ -391,7 +423,9 @@
     "target_schema = \"share_copy.knot\"\n",
     "\n",
     "def copy_table(table):\n",
-    "    sql = f\"create or replace table {target_schema}.{table} as select * from knot_share.optiml.{table}\"\n",
+    "    sql = f\"create or replace table share_copy.knot.{table} as select * from knot_share.optiml.{table}\"\n",
+    "    run_sql(sql)\n",
+    "    sql = f\"create or replace table share_copy.knot_monitoring.{table} clone share_copy.knot.{table}\"    \n",
     "    run_sql(sql)\n",
     "\n",
     "# List of arguments\n",
