--- a/notebooks/rakuten/smart-suspend-simulate.ipynb
+++ b/notebooks/rakuten/smart-suspend-simulate.ipynb
@@ -21,11 +21,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:06:28 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
-      "11:06:28 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n",
-      "11:06:28 INFO:Setting use_openssl_only mode to False\n",
-      "11:06:29 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
-      "11:06:29 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n"
+      "06:08:28 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
+      "06:08:28 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n",
+      "06:08:28 INFO:Setting use_openssl_only mode to False\n",
+      "06:08:29 INFO:Snowflake Connector for Python Version: 2.7.12, Python Version: 3.8.16, Platform: macOS-10.15.7-x86_64-i386-64bit\n",
+      "06:08:29 INFO:This connection is in OCSP Fail Open Mode. TLS Certificates would be checked for validity and revocation status. Any other Certificate Revocation related exceptions or OCSP Responder failures would be disregarded in favor of connectivity.\n"
      ]
     },
     {
@@ -39,11 +39,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:06:30 INFO:Snowpark Session information: \n",
+      "06:08:31 INFO:Snowpark Session information: \n",
       "\"version\" : 1.3.0,\n",
       "\"python.version\" : 3.8.16,\n",
       "\"python.connector.version\" : 2.7.12,\n",
-      "\"python.connector.session.id\" : 9098488785277118,\n",
+      "\"python.connector.session.id\" : 9098488785371206,\n",
       "\"os.name\" : Darwin\n",
       "\n"
      ]
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 15 ms (started: 2023-06-03 23:06:30 -04:00)\n"
+      "time: 16.1 ms (started: 2023-06-06 18:08:31 -04:00)\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:06:34 INFO:query: [select warehouse_id, era_start, era_end from query_era  -- where warehouse_id in...]\n"
+      "06:08:31 INFO:query: [select warehouse_id, era_start, era_end from query_era  -- where warehouse_id in...]\n"
      ]
     },
     {
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:06:36 INFO:query execution done\n"
+      "06:08:35 INFO:query execution done\n"
      ]
     },
     {
@@ -189,38 +189,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713353</th>\n",
+       "      <th>2860458</th>\n",
        "      <td>19</td>\n",
-       "      <td>2023-06-03 17:58:54.874000-07:00</td>\n",
-       "      <td>2023-06-03 17:58:54.887000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:42.122000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:42.344000-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713354</th>\n",
+       "      <th>2860459</th>\n",
        "      <td>19</td>\n",
-       "      <td>2023-06-03 17:58:55.839000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:22.289000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:43.604000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:55.034000-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713355</th>\n",
-       "      <td>19</td>\n",
-       "      <td>2023-06-03 17:59:22.587000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:22.600000-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713356</th>\n",
-       "      <td>19</td>\n",
-       "      <td>2023-06-03 17:59:23.599000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:52.019000-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713357</th>\n",
+       "      <th>2860460</th>\n",
        "      <td>4</td>\n",
-       "      <td>2023-06-03 17:59:51.882000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:52.339000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:56.708000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:57.429000-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2860461</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-06-06 09:59:57.970000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:58.526000-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2860462</th>\n",
+       "      <td>27</td>\n",
+       "      <td>2023-06-06 09:59:58.679000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:59.444000-07:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2713358 rows × 3 columns</p>\n",
+       "<p>2860463 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -231,11 +231,11 @@
        "3                  19 2023-02-17 11:39:10.942000-08:00   \n",
        "4                  19 2023-02-17 11:39:16.967000-08:00   \n",
        "...               ...                              ...   \n",
-       "2713353            19 2023-06-03 17:58:54.874000-07:00   \n",
-       "2713354            19 2023-06-03 17:58:55.839000-07:00   \n",
-       "2713355            19 2023-06-03 17:59:22.587000-07:00   \n",
-       "2713356            19 2023-06-03 17:59:23.599000-07:00   \n",
-       "2713357             4 2023-06-03 17:59:51.882000-07:00   \n",
+       "2860458            19 2023-06-06 09:59:42.122000-07:00   \n",
+       "2860459            19 2023-06-06 09:59:43.604000-07:00   \n",
+       "2860460             4 2023-06-06 09:59:56.708000-07:00   \n",
+       "2860461             4 2023-06-06 09:59:57.970000-07:00   \n",
+       "2860462            27 2023-06-06 09:59:58.679000-07:00   \n",
        "\n",
        "                                 era_end  \n",
        "0       2023-02-17 11:39:08.782000-08:00  \n",
@@ -244,13 +244,13 @@
        "3       2023-02-17 11:39:13.754000-08:00  \n",
        "4       2023-02-17 11:39:19.862000-08:00  \n",
        "...                                  ...  \n",
-       "2713353 2023-06-03 17:58:54.887000-07:00  \n",
-       "2713354 2023-06-03 17:59:22.289000-07:00  \n",
-       "2713355 2023-06-03 17:59:22.600000-07:00  \n",
-       "2713356 2023-06-03 17:59:52.019000-07:00  \n",
-       "2713357 2023-06-03 17:59:52.339000-07:00  \n",
+       "2860458 2023-06-06 09:59:42.344000-07:00  \n",
+       "2860459 2023-06-06 09:59:55.034000-07:00  \n",
+       "2860460 2023-06-06 09:59:57.429000-07:00  \n",
+       "2860461 2023-06-06 09:59:58.526000-07:00  \n",
+       "2860462 2023-06-06 09:59:59.444000-07:00  \n",
        "\n",
-       "[2713358 rows x 3 columns]"
+       "[2860463 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 9.3 s (started: 2023-06-03 23:06:34 -04:00)\n"
+      "time: 17.9 s (started: 2023-06-06 18:08:31 -04:00)\n"
      ]
     }
    ],
@@ -295,8 +295,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:06:43 INFO:query: [select warehouse_id, era_start, era_end from query_era  -- where warehouse_id in...]\n",
-      "11:06:43 INFO:query execution done\n"
+      "06:08:49 INFO:query: [select warehouse_id, era_start, era_end from query_era  -- where warehouse_id in...]\n",
+      "06:08:50 INFO:query execution done\n"
      ]
     },
     {
@@ -363,38 +363,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713353</th>\n",
+       "      <th>2860458</th>\n",
        "      <td>19</td>\n",
-       "      <td>2023-06-03 17:58:54.874000-07:00</td>\n",
-       "      <td>2023-06-03 17:58:54.887000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:42.122000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:42.344000-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713354</th>\n",
+       "      <th>2860459</th>\n",
        "      <td>19</td>\n",
-       "      <td>2023-06-03 17:58:55.839000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:22.289000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:43.604000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:55.034000-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2713355</th>\n",
-       "      <td>19</td>\n",
-       "      <td>2023-06-03 17:59:22.587000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:22.600000-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713356</th>\n",
-       "      <td>19</td>\n",
-       "      <td>2023-06-03 17:59:23.599000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:52.019000-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713357</th>\n",
+       "      <th>2860460</th>\n",
        "      <td>4</td>\n",
-       "      <td>2023-06-03 17:59:51.882000-07:00</td>\n",
-       "      <td>2023-06-03 17:59:52.339000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:56.708000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:57.429000-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2860461</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-06-06 09:59:57.970000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:58.526000-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2860462</th>\n",
+       "      <td>27</td>\n",
+       "      <td>2023-06-06 09:59:58.679000-07:00</td>\n",
+       "      <td>2023-06-06 09:59:59.444000-07:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2713358 rows × 3 columns</p>\n",
+       "<p>2860463 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -405,11 +405,11 @@
        "3                  19 2023-02-17 11:39:10.942000-08:00   \n",
        "4                  19 2023-02-17 11:39:16.967000-08:00   \n",
        "...               ...                              ...   \n",
-       "2713353            19 2023-06-03 17:58:54.874000-07:00   \n",
-       "2713354            19 2023-06-03 17:58:55.839000-07:00   \n",
-       "2713355            19 2023-06-03 17:59:22.587000-07:00   \n",
-       "2713356            19 2023-06-03 17:59:23.599000-07:00   \n",
-       "2713357             4 2023-06-03 17:59:51.882000-07:00   \n",
+       "2860458            19 2023-06-06 09:59:42.122000-07:00   \n",
+       "2860459            19 2023-06-06 09:59:43.604000-07:00   \n",
+       "2860460             4 2023-06-06 09:59:56.708000-07:00   \n",
+       "2860461             4 2023-06-06 09:59:57.970000-07:00   \n",
+       "2860462            27 2023-06-06 09:59:58.679000-07:00   \n",
        "\n",
        "                                 era_end  \n",
        "0       2023-02-17 11:39:08.782000-08:00  \n",
@@ -418,13 +418,13 @@
        "3       2023-02-17 11:39:13.754000-08:00  \n",
        "4       2023-02-17 11:39:19.862000-08:00  \n",
        "...                                  ...  \n",
-       "2713353 2023-06-03 17:58:54.887000-07:00  \n",
-       "2713354 2023-06-03 17:59:22.289000-07:00  \n",
-       "2713355 2023-06-03 17:59:22.600000-07:00  \n",
-       "2713356 2023-06-03 17:59:52.019000-07:00  \n",
-       "2713357 2023-06-03 17:59:52.339000-07:00  \n",
+       "2860458 2023-06-06 09:59:42.344000-07:00  \n",
+       "2860459 2023-06-06 09:59:55.034000-07:00  \n",
+       "2860460 2023-06-06 09:59:57.429000-07:00  \n",
+       "2860461 2023-06-06 09:59:58.526000-07:00  \n",
+       "2860462 2023-06-06 09:59:59.444000-07:00  \n",
        "\n",
-       "[2713358 rows x 3 columns]"
+       "[2860463 rows x 3 columns]"
       ]
      },
      "execution_count": 4,
@@ -435,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 8.13 s (started: 2023-06-03 23:06:43 -04:00)\n"
+      "time: 12.6 s (started: 2023-06-06 18:08:49 -04:00)\n"
      ]
     }
    ],
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.57 ms (started: 2023-06-03 23:06:51 -04:00)\n"
+      "time: 3.24 ms (started: 2023-06-06 18:09:02 -04:00)\n"
      ]
     }
    ],
@@ -622,33 +622,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:08:59 INFO:query: [create temporary stage /* Python:snowflake.connector.pandas_tools.write_pandas()...]\n",
-      "11:08:59 INFO:query execution done\n",
-      "11:09:00 INFO:query: [PUT /* Python:snowflake.connector.pandas_tools.write_pandas() */ 'file:///var/fo...]\n",
-      "11:09:01 INFO:query execution done\n",
-      "11:09:59 INFO:query: [CREATE FILE FORMAT \"tdfdu\" /* Python:snowflake.connector.pandas_tools.write_pand...]\n",
-      "11:09:59 INFO:query execution done\n",
-      "11:09:59 INFO:query: [SELECT COLUMN_NAME, TYPE FROM table(infer_schema(location=>'@\"dmzln\"', file_form...]\n",
-      "11:10:00 INFO:query execution done\n",
-      "11:10:00 INFO:query: [CREATE TEMPORARY TABLE IF NOT EXISTS \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TE...]\n",
-      "11:10:01 INFO:query execution done\n",
-      "11:10:01 INFO:query: [DROP FILE FORMAT IF EXISTS \"tdfdu\"]\n",
-      "11:10:01 INFO:query execution done\n",
-      "11:10:01 INFO:query: [COPY INTO \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_DMMXUQJACY\" /* Pyt...]\n",
-      "11:10:06 INFO:query execution done\n",
-      "11:10:06 INFO:query: [SELECT  *  FROM (\"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_DMMXUQJACY\"...]\n",
-      "11:10:06 INFO:query execution done\n",
-      "11:10:06 INFO:query: [SELECT  *  FROM \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_DMMXUQJACY\"]\n",
-      "11:10:07 INFO:query execution done\n",
-      "11:10:07 INFO:query: [CREATE  OR  REPLACE    TABLE  wh_events_sim_python AS  SELECT  *  FROM ( SELECT ...]\n",
-      "11:10:09 INFO:query execution done\n"
+      "06:11:24 INFO:query: [create temporary stage /* Python:snowflake.connector.pandas_tools.write_pandas()...]\n",
+      "06:11:26 INFO:query execution done\n",
+      "06:11:27 INFO:query: [PUT /* Python:snowflake.connector.pandas_tools.write_pandas() */ 'file:///var/fo...]\n",
+      "06:11:27 INFO:query execution done\n",
+      "06:11:37 INFO:query: [CREATE FILE FORMAT \"eopgi\" /* Python:snowflake.connector.pandas_tools.write_pand...]\n",
+      "06:11:38 INFO:query execution done\n",
+      "06:11:38 INFO:query: [SELECT COLUMN_NAME, TYPE FROM table(infer_schema(location=>'@\"tmcjj\"', file_form...]\n",
+      "06:11:38 INFO:query execution done\n",
+      "06:11:38 INFO:query: [CREATE TEMPORARY TABLE IF NOT EXISTS \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TE...]\n",
+      "06:11:39 INFO:query execution done\n",
+      "06:11:39 INFO:query: [DROP FILE FORMAT IF EXISTS \"eopgi\"]\n",
+      "06:11:39 INFO:query execution done\n",
+      "06:11:39 INFO:query: [COPY INTO \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_BYSD8LV9YY\" /* Pyt...]\n",
+      "06:11:44 INFO:query execution done\n",
+      "06:11:44 INFO:query: [SELECT  *  FROM (\"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_BYSD8LV9YY\"...]\n",
+      "06:11:45 INFO:query execution done\n",
+      "06:11:45 INFO:query: [SELECT  *  FROM \"SHARE_COPY\".\"KNOT_MONITORING\".\"SNOWPARK_TEMP_TABLE_BYSD8LV9YY\"]\n",
+      "06:11:45 INFO:query execution done\n",
+      "06:11:45 INFO:query: [CREATE  OR  REPLACE    TABLE  wh_events_sim_python AS  SELECT  *  FROM ( SELECT ...]\n",
+      "06:11:48 INFO:query execution done\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3min 15s (started: 2023-06-03 23:06:53 -04:00)\n"
+      "time: 2min 46s (started: 2023-06-06 18:09:02 -04:00)\n"
      ]
     }
    ],
