--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -128,110 +128,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Initialize connection to Snowflake and set analysis date\n",
-    "# from optiml.connection import SnowflakeConnConfig\n",
-    "# connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# # Initialize local environment\n",
-    "# import os\n",
-    "# cache_dir = os.path.expanduser('~/data/kiva')\n",
-    "\n",
-    "# # Analysis setup\n",
-    "# sdate = '2022-09-28'\n",
-    "# edate = '2022-10-12'\n",
-    "# delta = 'hour'\n",
-    "# company = 'KIV'\n",
-    "# account_type = \"standard\"\n",
-    "\n",
-    "# # Initialize query library\n",
-    "# from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "# wqlib = WarehouseProfile(connection, company, cache_dir)\n",
-    "# from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
-    "# cqlib = CostProfile(connection, company, cache_dir, account_type)\n",
-    "\n",
-    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Warehouse load analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wh_credits = cqlib.cost_by_wh_ts(sdate, edate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delta = 'hour'\n",
-    "wh_configs = wqlib.warehouse_config()\n",
-    "wh_name = wh_configs[\"name\"].unique().tolist()\n",
-    "wh_load = {}\n",
-    "for n in wh_name:\n",
-    "    wh_load[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=delta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for n in wh_name:\n",
-    "    if not wh_load[n].empty: \n",
-    "        df_load = wh_load[n]\n",
-    "        df_credits = wh_credits[wh_credits[\"warehouse_name\"] == n].reset_index(drop=True)\n",
-    "        df_credits.sort_values(by=[\"hourly_start_time\"],inplace=True)\n",
-    "        df_credits.reset_index(drop=True,inplace=True)\n",
-    "\n",
-    "        trace1 = go.Bar(\n",
-    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_queued_load\"],\n",
-    "            name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    "        )\n",
-    "        trace2 = go.Bar(\n",
-    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_running_load\"],\n",
-    "            name='Running load',marker=dict(color='rgb(0,0,255)')\n",
-    "        )\n",
-    "        trace3 = go.Scatter(\n",
-    "          x=df_credits['hourly_start_time'] ,y=df_credits['credits'],\n",
-    "            name='Credits consumed', mode='lines+markers',\n",
-    "        )\n",
-    "\n",
-    "        f = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
-    "        \n",
-    "        f.add_trace(trace1, secondary_y=False)\n",
-    "        f.add_trace(trace2, secondary_y=False)\n",
-    "        f.update_layout(barmode='stack')\n",
-    "        f.add_trace(trace3, secondary_y=True)\n",
-    "        f.update_layout(\n",
-    "            xaxis_title=\"Hourly start time (UTC)\",\n",
-    "            title=n,\n",
-    "            xaxis=dict(showgrid=False),\n",
-    "            yaxis=dict(showgrid=False)\n",
-    "        )\n",
-    "        f.update_yaxes(title_text=\"Query Load\", secondary_y=False)\n",
-    "        f.update_yaxes(title_text=\"Credits\", secondary_y=True)\n",
-    "        f.update_yaxes(rangemode=\"tozero\", secondary_y=True)\n",
-    "        \n",
-    "        f.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "## Scaling policy for DEV_WH and dither queries to other places when WH query load is low\n",
     "## Analyze which queries are triggering a queue in PROD_WH.\n",
     "## Analyze if there is opportunity to dither queries between ML_WH, DAILY_REFRESH_WH and DEV_WH\n",
@@ -260,7 +156,8 @@
    "outputs": [],
    "source": [
     "delta = 'hour'\n",
-    "df = wqlib.wh_load_and_efficiency(start_date=sdate,end_date=edate,delta=delta)\n",
+    "warehouse_name=\"PROD_WH\"\n",
+    "df = wqlib.wh_load_and_efficiency(start_date=sdate,end_date=edate,warehouse_name=warehouse_name, delta=delta)\n",
     "df.head(10)"
    ]
   },
