--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -42,10 +42,10 @@
    "outputs": [],
    "source": [
     "## Setup connection to DWH\n",
-    "# customer = 'KIVA'\n",
-    "# schema = 'KIVA_PROD.OPTIML'\n",
-    "customer = 'OPTIML' # Use this for testing\n",
-    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
+    "customer = 'KIVA'\n",
+    "schema = 'KIVA_PROD.OPTIML'\n",
+    "# customer = 'OPTIML' # Use this for testing\n",
+    "# schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
     "username = customer + '_USERNAME'\n",
     "password = customer + '_PASSWORD'\n",
     "account = customer + '_ACCOUNT'\n",
@@ -94,10 +94,10 @@
     "\n",
     "# Initialize dates\n",
     "import datetime \n",
-    "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
-    "# sdate = edate - datetime.timedelta(days=6)\n",
-    "edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
-    "sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
+    "edate = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "sdate = edate - datetime.timedelta(days=6)\n",
+    "# edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
+    "# sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
     "print('Customer:', customer)\n",
     "print('Schema:', schema)\n",
     "print(str(sdate), str(edate))"
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "df_expensive_queries_failed = qqlib.queries_by_execution_status(sdate,edate,'FAIL')\n",
-    "df_expensive_queries_failed.head()"
+    "# df_expensive_queries_failed.head()"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "source": [
     "df_unique_fail = qqlib.get_unique_failed_queries_with_metrics_ordered(df_expensive_queries_failed, 'credits')\n",
     "df_unique_fail.reset_index(inplace=True)\n",
-    "df_unique_fail.head(20)"
+    "# df_unique_fail.head(20)"
    ]
   },
   {
@@ -630,6 +630,13 @@
     "        'yanchor': 'bottom'})\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
