autosuspend_monitoring.ipynb for TKWW

--- a/notebooks/dev/autosuspend_monitoring.ipynb
+++ b/notebooks/dev/autosuspend_monitoring.ipynb
@@ -75,8 +75,8 @@
    "source": [
     "run_sql(\"set lookback_days=30\")\n",
     "\n",
-    "# wh_name = 'XOGRP_DEV_WH'\n",
-    "wh_name = 'SEGMENT_LOAD_WH'\n",
+    "wh_name = 'XOGRP_DEV_WH'\n",
+    "# wh_name = 'SEGMENT_LOAD_WH'\n",
     "wh_profile = f\"\"\"\n",
     "select \n",
     "    *,\n",
@@ -716,7 +716,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_sql(\"set lookback_days=30\")"
+    "run_sql(\"set lookback_days=50\")"
    ]
   },
   {
@@ -845,7 +845,7 @@
     "fig = px.line(df_concat, x='time_delta', y='cumulative_dollars_used_compute', color=df_concat.index.get_level_values(0), title='Comparison of Columns')\n",
     "fig.update_layout(yaxis_title='Dollars')\n",
     "fig.update_layout(xaxis_title='Hours')\n",
-    "fig.update_layout(title='Observational difference in cost after turning on Aero (SEGMENT_LOAD_WH)')\n",
+    "fig.update_layout(title='Observational difference in cost after turning on Aero')\n",
     "\n",
     "fig.show()"
    ]
@@ -858,7 +858,7 @@
    "outputs": [],
    "source": [
     "%%markdown\n",
-    "## ================ Previous analyses======================"
+    "## ================ Previous analyses ======================"
    ]
   },
   {
